-bug#0001145: Save Failed error when changing Graph Details
-bug#0001166: Installer does not properly handle disabled guest_user conversion
-bug#0001191: Faulty IP address validation by ping.php script
-bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
-bug#0001215: Impossible to define a none availability with the client cli/add_device.php
-bug#0001244: missing closing </form> on host.php
-bug: initialization of snmp_auth when using SNMP=NONE
-bug: speed up add_graphs.php in most cases (still slow only if --input-fields is used)
-bug: If the poller_output table is not empty, don't flood the log
-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
-bug: Graph Export would fail while zooming on some systems
-bug: Add API Automation tool quietMode to additional functions
-bug: SNMP string cleanup removes too many '=' signs
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: database upgrade and cacti.sql differ
-feature#0001235: CLI script needed to activate a query: add_data_query.php
-feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
-feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
-feature#0001195: add graph title to graphs page
-feature#0001189: Introducing |data_source_title| variable
-feature: add links to Graph Management and Data Sources to Device Edit Screen
-feature: add links to Graph Template and Host Edit to Graph Edit Screen
-feature: add links to Data Template and Host Edit to Data Source Edit Screen
-feature: support using the cacti database api with more than one connection
-feature: Add some more debug lines to Data Query debugging (Verbose Query)
-feature: Fix compatibility issues for RRDTool 1.3

0.8.7b